@@ -1,3 +1,9 @@
+2020-03-11 Daniel Farrow:
+
+  * line_classifier/lfs_ews/equivalent_width.py: Only change random seed if asked to
+  * line_classifier/probs/classification_prob.py: Call InterpolatedParameter
+                                                  method but its new name
+
 2019-12-03 Daniel Farrow:
 
    * line_classifier/lfs_ews/equivalent_width.py: Added an aborted attempt at
